# blobdash

./: .dockerignore  .gitignore  Dockerfile  README.md  Taskfile.yml  blobdash.example.toml  pyproject.toml
.github/workflows/: build.yml
docs/: configuration.md
docs/examples/: blobdash.example.toml  compose.example.yaml
src/blobdash/: __init__.py  applications.py  auth.py  settings.py
src/blobdash/static/: main.css
src/blobdash/templates/: index.html  index.html.jinja
