[project]
name = "blobdash"
version = "0.5.0"
readme = "README.md"
authors = [
    { name = "thcrt", email = "110127860+thcrt@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.7",
    "flask>=3.0.3",
    "pydantic-extra-types>=2.10.0",
    "pydantic>=2.10.1",
    "pydantic-settings>=2.6.1",
    "waitress>=3.0.1",
    "authentik-client>=2024.10.4.post1733219872",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ruff>=0.7.2",
]

[tool.ruff]
line-length = 100

[tool.ruff.format]
docstring-code-format = true
